# docker-opengrok

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml
example/: .env  compose.override.yaml  example.json  ssh_config
opengrok-manager/: pyproject.toml
opengrok-manager/opengrok_manager/: __init__.py  main.py
scripts/: server.sh
